ecmascript/parser/tests/typescript-errors/custom/const-enum/input.ts.stderr
error: Expected ,, got Some(g)
 --> $DIR/tests/typescript-errors/custom/const-enum/input.ts:4:5
  |
4 |     g = CONST
  |     ^

