ecmascript/parser/tests/typescript-errors/custom/const-enum/input.ts
const CONST = 9000 % 2;
const enum D {
    d = 10
    g = CONST
}